--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,7 +10,8 @@ python-dotenv==1.0.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
 httpx==0.25.2
-faster-whisper==0.10.0
+# faster-whisper removed - using mock transcription in cloud deployment
+# Install locally for real transcription: pip install faster-whisper==0.10.0
 google-generativeai>=0.8.0
 reportlab==4.0.7
 python-pptx==0.6.23
