--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,19 +1,42 @@
+# ===========================================
+# Project EDU - Backend Environment Configuration
+# ===========================================
+# Copy this file to .env and update values as needed
+
 # Database
 DATABASE_URL=sqlite:///./lectures.db
 
-# Security
+# Security (CHANGE IN PRODUCTION - use a random 32+ character string)
 SECRET_KEY=your_jwt_secret_key_here_change_in_production
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# AI Services (for future use)
-GOOGLE_API_KEY=your_gemini_api_key_here
-WHISPER_MODEL_SIZE=base
+# ===========================================
+# Local AI Models (Offline-first Architecture)
+# ===========================================
 
+# Moonshine ASR - Automatic Speech Recognition
+# Model auto-downloads from HuggingFace on first use
+MOONSHINE_MODEL=UsefulSensors/moonshine-base
+
+# Qwen 2.5 LLM - Slide Generation
+# Path to local GGUF model file (relative or absolute)
+QWEN_MODEL_PATH=../models/qwen2.5-7b.gguf
+
+# ===========================================
 # File Storage
+# ===========================================
 TEMP_FILE_DIR=./temp_uploads
 MAX_FILE_SIZE_MB=500
 MAX_DURATION_MINUTES=120
 
+# ===========================================
 # Processing
+# ===========================================
 BACKGROUND_TASK_TIMEOUT=3600
 CLEANUP_INTERVAL_HOURS=24
+
+# ===========================================
+# Development/Testing
+# ===========================================
+# Set to "true" ONLY for testing without models installed
+USE_MOCK_TRANSCRIPTION=false
