--- a/backend/production.env.example
+++ b/backend/production.env.example
@@ -1,36 +1,59 @@
-# Production Environment Configuration
+# ===========================================
+# Project EDU - Production Environment Configuration
+# ===========================================
 # Copy this file to .env and update with your production values
 
+# ===========================================
 # Database - Use PostgreSQL for production
+# ===========================================
 DATABASE_URL=postgresql://username:password@localhost:5432/lecture_to_slides
 
-# Security - Generate a secure random key
-SECRET_KEY=your_production_secret_key_here_minimum_32_characters_long
+# ===========================================
+# Security (REQUIRED - Generate secure random values)
+# ===========================================
+SECRET_KEY=your_production_secret_key_minimum_32_characters_long
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# CORS - Update with your production frontend domain
+# CORS - Update with your actual frontend domain(s)
 ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
 
-# AI Services
-GOOGLE_API_KEY=your_actual_gemini_api_key_here
-WHISPER_MODEL_SIZE=base
+# ===========================================
+# Local AI Models (Offline-first Architecture)
+# ===========================================
 
-# File Storage - Use cloud storage for production
+# Moonshine ASR - runs on CPU, auto-downloads from HuggingFace
+MOONSHINE_MODEL=UsefulSensors/moonshine-base
+
+# Qwen 2.5 LLM - path to GGUF model file
+# For production, store in persistent volume
+QWEN_MODEL_PATH=/data/models/qwen2.5-7b.gguf
+
+# ===========================================
+# File Storage - Use persistent volume for production
+# ===========================================
 TEMP_FILE_DIR=/var/tmp/lecture_uploads
 MAX_FILE_SIZE_MB=500
 MAX_DURATION_MINUTES=120
 
+# ===========================================
 # Processing
+# ===========================================
 BACKGROUND_TASK_TIMEOUT=3600
 CLEANUP_INTERVAL_HOURS=24
 
+# ===========================================
 # Production Settings
+# ===========================================
 ENVIRONMENT=production
 DEBUG=false
 LOG_LEVEL=INFO
 
-# Optional: Redis for task queue (recommended for production)
+# ===========================================
+# Optional: Redis for task queue (recommended)
+# ===========================================
 REDIS_URL=redis://localhost:6379/0
 
-# Optional: Sentry for error tracking
+# ===========================================
+# Optional: Error Tracking
+# ===========================================
 SENTRY_DSN=your_sentry_dsn_here
