project-edu rework

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,8 +19,9 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 MOONSHINE_MODEL=UsefulSensors/moonshine-base
 
 # Qwen 2.5 LLM - Slide Generation
+# Use 3B model for lower RAM (~4GB), or 7B for better quality (~8GB RAM)
 # Path to local GGUF model file (relative or absolute)
-QWEN_MODEL_PATH=../models/qwen2.5-7b.gguf
+QWEN_MODEL_PATH=../models/qwen2.5-3b.gguf/qwen2.5-3b-instruct-q4_k_m.gguf
 
 # ===========================================
 # File Storage
