--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,26 +10,27 @@
     "test": "vitest --run"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "zustand": "^4.4.0",
-    "axios": "^1.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5"
+    "axios": "^1.6.0",
+    "lucide-react": "^0.562.0",
+    "next": "14.0.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "typescript": "^5",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.0.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
-    "vitest": "^1.0.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/user-event": "^14.0.0",
-    "jsdom": "^23.0.0"
+    "jsdom": "^23.0.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "vitest": "^1.0.0"
   }
 }
