Multimodal build ready

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,10 +18,18 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 # Model auto-downloads from HuggingFace on first use
 MOONSHINE_MODEL=UsefulSensors/moonshine-base
 
-# Qwen 2.5 LLM - Slide Generation
+# Qwen 2.5 LLM - Slide Generation (DEFAULT)
 # Use 3B model for lower RAM (~4GB), or 7B for better quality (~8GB RAM)
 # Path to local GGUF model file (relative or absolute)
 QWEN_MODEL_PATH=../models/qwen2.5-3b.gguf/qwen2.5-3b-instruct-q4_k_m.gguf
+
+# Gemma 3 4B LLM - Alternative local model (OPTIONAL)
+# Lighter and newer Gemma model (~2.5GB GGUF), good for balanced quality/size
+GEMMA_MODEL_PATH=../models/gemma-3-4b.gguf/gemma-3-4b-it-Q4_K_M.gguf
+
+# Google Gemini API - Cloud fallback (OPTIONAL)
+# Get API key from: https://makersuite.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
 
 # ===========================================
 # File Storage
